--- a/src/pages/Main Tabs/follow-up/follow-up.html
+++ b/src/pages/Main Tabs/follow-up/follow-up.html
@@ -1,10 +1,9 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
+  <ion-navbar color="primary" >
+    <ion-title>Follow Up</ion-title>
   </ion-navbar>
 </ion-header>
+
 
 <ion-content padding>
 
