--- a/src/pages/Main Tabs/active-jobs/active-jobs.html
+++ b/src/pages/Main Tabs/active-jobs/active-jobs.html
@@ -7,4 +7,14 @@
 
 <ion-content padding>
 
+  <ion-card>
+    <ion-card-content>
+      <ion-item *ngFor="let j of activejobs" >
+        {{j.SchoolName}}
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+
+
 </ion-content>
